force-app/main/default/PKG/Stdlib.Oms/objects/ChangeOrder__c/ChangeOrder__c.object-meta.xml
<CustomObject>
    <label>Change Order</label>
    <nameField>
        <label>Credit Memo Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>