force-app/main/default/PKG/Stdlib.Oms/objects/ChangeOrder__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>ChangeOrders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>