force-app/main/default/PKG/Stdlib.Oms/objects/ChangeOrder__c/fields/OrderSummary__c.field-meta.xml
<CustomField>
    <fullName>OrderSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>ChangeOrders</relationshipName>
    <type>Lookup</type>
</CustomField>