force-app/main/default/PKG/Stdlib.Oms/objects/ChangeOrder__c/fields/RelatedOrder__c.field-meta.xml
<CustomField>
    <fullName>RelatedOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Change Orders (Related Order)</relationshipLabel>
    <relationshipName>RelatedOrders</relationshipName>
    <type>Lookup</type>
</CustomField>